Still working on getting view to work...

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=false" />
+    <meta name="description" content="CodeMirror - C#" />
+    <meta name="keywords" content="CodeMirror, C#" />
+    <script src="src/index.js" type="module"></script>
     <title>CodeMirror - C#</title>
   </head>
 
   <body>
-    <script src="src/index.js" type="module"></script>
-    <div id="editor">
-    </div>
+    <div id="editor"></div>
+
     <footer>
       Made with ❤️ by BatemaDevelopment!
     </footer>
