Got the editor to show up

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=false" />
     <meta name="description" content="CodeMirror - C#" />
     <meta name="keywords" content="CodeMirror, C#" />
-    <script src="src/index.js" type="module"></script>
     <title>CodeMirror - C#</title>
   </head>
 
   <body>
-    <div id="editor"></div>
+    <script src="src/editor.bundle.js"></script>
 
     <footer>
       Made with ❤️ by BatemaDevelopment!
