--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
 
   <body>
-    <script src="src/editor.bundle.js"></script>
+    <script type="module" src="src/bundles/editor.bundle.js"></script>
+
+    <main>
+      <div id="editor"></div>
+    </main>
 
     <footer>
       Made with ❤️ by BatemaDevelopment!
