Change the whole site to Dark Mode

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>CodeMirror - C#</title>
   </head>
 
-  <body>
+  <body style="background-color: #212122;">
     <script type="module" src="src/bundles/editor.bundle.js"></script>
 
     <main>
       <div id="editor"></div>
     </main>
 
-    <footer>
+    <footer style="text-align: center; color: #FFF; padding-top: 10px;">
       Made with ❤️ by BatemaDevelopment!
     </footer>
   </body>
