--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body style="background-color: #212122;">
-    <script type="module" src="src/bundles/editor.bundle.js"></script>
+    <script type="module" src="src/bundles/editor.bundle.min.js"></script>
 
     <main>
       <div id="editor"></div>
