Do not run as this is currently borked kek

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   </head>
 
   <body style="background-color: #212122;">
-    <script type="module" src="src/bundles/editor.bundle.min.js"></script>
+    <script src="src/bundles/full.rollup.bundle.js"></script>
 
     <main>
       <div id="editor"></div>
+      <div id="console"></div>
     </main>
 
     <footer style="text-align: center; color: #FFF; padding-top: 10px;">
