--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <script type="module" src="src/bundles/full.rollup.bundle.js"></script>
 
     <main>
-      <div id="editor"><button id="run" onclick="run">Run</button></div>
+      <div id="editor"></div>
       <iframe title="output" id="output"></iframe>
-      <br />
-      
     </main>
 
     <footer style="text-align: center; color: #FFF; padding-top: 10px;">
